--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>edjmicro index page</title>
+		<title>edjmicro</title>
 	</head>
 	<body>
-		<h1>edjmicro index page</h1>
+		<h1>edjmicro</h1>
+		<p>This is a boilerplate for using <a href="https://www.djangoproject.com/">Django</a> as a micro framework.</p>
+		<p><a href="https://github.com/edhedges/edjmicro">Use it!</a></p>
 	</body>
 </html>
